Ensure no overflow scrolling

--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: hidden;
 
   h2.section-title {
     font-family: $lekton;
